# homeworld

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .kateconfig  .kateproject  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
.claude/: settings.local.json
.github/workflows/: README.md  android.yml  ci.yml  release.yml  wasm.yml
Linux/: BUILD.md
Mac/Homeworld.xcodeproj/: project.pbxproj
android/: build-local.sh  build.gradle  gradle.properties  settings.gradle
android/.kas2c-build/: lexer.c  parser.c  parser.h
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/jni/compat/SDL2/: SDL_endian.h  SDL_keycode.h  SDL_net.h  SDL_opengl.h  SDL_scancode.h  SDL_stdinc.h  SDL_syswm.h  SDL_thread.h
android/app/jni/src/: CMakeLists.txt  main_hello.c
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/homeworld/gok/: HomeworldActivity.java  LauncherActivity.java
android/app/src/main/res/values/: strings.xml
documentation/: README.md
documentation/community/: README.md  installation-manual.md  players-manual.md
documentation/contributors/: compiling-from-source.md  contributing-code.md  license-agreement.md  triaging-issues.md
mingw/: Makefile
src/Game/: AIEvents.c  AIMoves.c  AIPlayer.c  AITeam.c  B-Spline.c  BMP.h  CameraCommand.c  CameraCommand.h  Clipper.c  CommandLayer.c  ConsMgr.c  Debug.c  ETG.c  ETG.h  FEFlow.c  FEFlow.h  FEReg.c  File.c  GameChat.c  GamePick.c  HS.c  HorseRace.c  Memory.c  Memory.h  Mesh.c  MeshAnim.c  MultiplayerGame.c  MultiplayerLANGame.c  NIS.c  Nebulae.c  Objectives.c  Options.c  Particle.c  Particle.h  Ping.c  Region.c  ResCollect.c  SaveGame.c  Select.c  Select.h  (+7 more)
src/SDL/: NetworkInterface.c  NetworkInterface.h  TitanInterfaceC.c  avi.c  font.c  glinc.h  main.c  main.h  mainrgn.c  mainswitches.h  mouse.c  prim2d.c  render.c  rinit.c  screenshot.c  smixer.c  texreg.c  texreg.h  utility.c
src/Ships/: Carrier.c  CloakGenerator.c  DDDFrigate.c  DefenseFighter.c  GravWellGenerator.c  HeavyCorvette.c  MinelayerCorvette.c  Mothership.c  ProximitySensor.c  RepairCorvette.c  ResearchShip.c  SalCapCorvette.c  ShipDefs.h
tools/kas2c/: parser.y
tools/x86_64/: Makefile
zarchive/: README.md
